java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateParam2-hints.pass
Create field foo in org.netbeans.test.java.hints.CreateParam2
Create parameter foo
Create local variable foo
